# non_structural_derive

./: Cargo.toml  README.md
macro/: Cargo.toml
macro/src/: lib.rs
src/: lib.rs
tests/: all_traits.rs
