[workspace]
members = ["macro"]

[workspace.package]
description = "nonstructural derives for auto traits"
license = "MIT OR Apache-2.0"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/fee1-dead/non_structural_derive"

[package]
name = "non_structural_derive"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
non_structural_derive_macro = { version = "0.1.1", path = "./macro" }
